fix concept raw data chips overflow

--- a/app/assets/stylesheets/concepts.scss
+++ b/app/assets/stylesheets/concepts.scss
@@ -167,11 +167,9 @@ div.synonym-change-request button {
   margin-top: -4px;
 }
 
-.concept_details_component{
-  .chip-button-component-container{
-    word-break: break-word !important;
-    overflow-wrap: break-word !important;
-    white-space: normal !important;
-  }
+#details_content .chip-button-component-container {
+  word-break: break-word !important; /* Prevent breaking in the middle of words */
+  overflow-wrap: break-word !important; /* Ensure words wrap properly */
+  white-space: normal !important; /* Allow text to wrap */
 }
 
